--- a/assets/css/claim-form.css
+++ b/assets/css/claim-form.css
@@ -104,10 +104,10 @@
 .bd-claim-close {
 	position: absolute;
 	top: 16px;
-	right: 16px;
-	width: 40px;
-	height: 40px;
-	background: rgba(255, 255, 255, 0.1);
+	right: 0px;
+	width: 120px;
+	height: 10px;
+	background: none;
 	border: none;
 	border-radius: 50%;
 	display: flex;
@@ -119,7 +119,7 @@
 }
 
 .bd-claim-close:hover {
-	background: rgba(255, 255, 255, 0.2);
+	background: none;
 	transform: rotate(90deg);
 }
 
